[package]
name = "music-judge"
version = "0.1.0"
edition = "2024"
description = "Multi-dimensional singing score — pitch, rhythm, stability, and expression evaluation"
license = "Apache-2.0"
repository = "https://github.com/xycld/music-judge"
keywords = ["singing", "pitch", "dtw", "audio", "scoring"]
categories = ["algorithms", "multimedia::audio"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustfft = "6"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"

[[bench]]
name = "dtw_bench"
harness = false
